2004-07-05  Todd Berman  <tberman@off.net>

	* Internal/Codons/MenuItems/MenuItemCodon.cs: allow menuitems with
	a submenu to be translated properly.

2004-07-04  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/AbstractBrowserNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/ReferenceNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/CombineBrowserNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/DirectoryNode.cs:   
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	* Internal/Project/Project/IncludeFilesDialog.cs:
	Use the MessageService everywhere, and cleanup these files a bit

2004-07-02  Todd Berman  <tberman@off.net>

	* Services/MessageService.cs: Convert most of these to be threadsafe.
	Need to do AskQuestion, but this fixes a bug, so I will commit now.

2004-07-02  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs: Dont use the FileFilters, as there are
	not functional at the moment.
	* Services/File/DefaultFileService.cs: don't attempt to load a
	directory, as its never valid.

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* Commands/AutoStartCommands.cs: remove old Code generation,
	assembly preload, and tip of the day on start, because they
	are no longer used, and I believe no longer will be
	someone correct me if I am wrong

2004-07-01  Todd Berman  <tberman@off.net>

	* Gui/Worbench/Layouts/SdiWorkspaceLayout.cs: Remove the code that
	hides the tabs when there is only one item.

2004-07-01  Todd Berman  <tberman@off.net>

	* Services/ResourceService.cs: Remove a lot of code associated with
	loading resources at runtime, etc.

2004-06-29  Todd Berman  <tberman@off.net>

	* Internal/Codons/Templates/ProjectTemplateCodon.cs: new codon for
	project templates.
	* Internal/Templates/ProjectTemplates/ProjectTemplate.cs: convert to